Add working LinkedList code for Integer Addition